--- a/memories.html
+++ b/memories.html
@@ -247,32 +247,32 @@
 
   <div class="gallery">
   <div class="image-card">
-    <img src="images/image1.jpg" data-message="First Moment With You🥰💍">
+    <img src="image1.jpg" data-message="First Moment With You🥰💍">
     <span class="tooltip"></span>
   </div>
 
   <div class="image-card">
-    <img src="images/image2.jpg" data-message="hand in hand, eyes to eyes, hearts in sync🫀">
+    <img src="image2.jpg" data-message="hand in hand, eyes to eyes, hearts in sync🫀">
     <span class="tooltip"></span>
   </div>
 
   <div class="image-card">
-    <img src="images/image3.jpg" data-message="trips with you feels like a love-filled adventure🌍✌🏻">
+    <img src="image3.jpg" data-message="trips with you feels like a love-filled adventure🌍✌🏻">
     <span class="tooltip"></span>
   </div>
 
   <div class="image-card">
-    <img src="images/image4.jpg" data-message="your beauty takes my breath away🤩💖">
+    <img src="image4.jpg" data-message="your beauty takes my breath away🤩💖">
     <span class="tooltip"></span>
   </div>
 
   <div class="image-card">
-    <img src="images/image5.jpg" data-message="May Allah keep this smile forever🥹🤲🏻">
+    <img src="image5.jpg" data-message="May Allah keep this smile forever🥹🤲🏻">
     <span class="tooltip"></span>
   </div>
 
   <div class="image-card">
-    <img src="images/image6.jpg" data-message="When you look at me, my heart forgets the rest of the world🙈💘">
+    <img src="image6.jpg" data-message="When you look at me, my heart forgets the rest of the world🙈💘">
     <span class="tooltip"></span>
   </div>
 </div>
