--- a/birthday.html
+++ b/birthday.html
@@ -10,7 +10,12 @@
     display:flex;
     justify-content:center;
     align-items:center;
-    background:linear-gradient(135deg,#b44665,#d293c0);
+    background:
+    linear-gradient(
+      rgba(180,70,101,0.6),
+      rgba(210,147,192,0.6)
+    ),
+   url("image4.jpg");
     font-family:Segoe UI,sans-serif;
     overflow: hidden;
   }
