--- a/birthday.html
+++ b/birthday.html
@@ -16,6 +16,11 @@
       rgba(210,147,192,0.6)
     ),
    url("image4.jpg");
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+
+
     font-family:Segoe UI,sans-serif;
     overflow: hidden;
   }
