--- a/birthday.html
+++ b/birthday.html
@@ -12,17 +12,19 @@
     align-items:center;
     background:
     linear-gradient(
-      rgba(180,70,101,0.6),
-      rgba(210,147,192,0.6)
+      rgba(0,0,0,0.6),
+      rgba(0,0,0,0.6)
     ),
    url("image4.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
-
+   widh:100%;
+   height:100%
 
     font-family:Segoe UI,sans-serif;
     overflow: hidden;
+    
   }
 
   /* Heart style */
