--- a/birthday.html
+++ b/birthday.html
@@ -69,7 +69,7 @@
   }
 }
   .card{
-    background:rgb(237, 94, 94);
+    background: rgba(233, 84, 133, 0.9);
     padding:40px;
     border-radius:20px;
     text-align:center;
@@ -88,13 +88,13 @@
   }
 
   .wish-text{
-    color: rgb(5, 47, 47);
+    color:#4b0b25;
     font-family:'Courier New', Courier, monospace;
     font-style: italic;
     font-weight: bond;
   }
   .message{
-    color: rgb(209, 181, 144);
+    color: #5f1d35;
     font-size: medium;
     font-style: oblique;
   }
