--- a/birthday.html
+++ b/birthday.html
@@ -69,7 +69,7 @@
   }
 }
   .card{
-    background: rgba(233, 84, 133, 0.9);
+    background: rgba(176, 48, 96, 0.92);
     padding:40px;
     border-radius:20px;
     text-align:center;
@@ -80,7 +80,7 @@
     padding:12px 30px;
     border:none;
     border-radius:25px;
-    background:#84e09e;
+    background:rgba(0,0,0,0.6);
     color:rgb(17, 50, 5);
     font-size:16px;
     cursor:pointer;
