--- a/birthday.html
+++ b/birthday.html
@@ -12,8 +12,8 @@
     align-items:center;
     background:
     linear-gradient(
-      rgba(0,0,0,0.15),
-      rgba(0,0,0,0.15)
+      rgba(0,0,0,0.35),
+      rgba(0,0,0,0.35)
     ),
    url("image4.jpg");
    background-size: cover;
@@ -23,7 +23,10 @@
    height:100%
 
     font-family:Segoe UI,sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
+    background-attachment: fixed;
+ 
+}
     
   }
 
