--- a/birthday.html
+++ b/birthday.html
@@ -23,11 +23,8 @@
    height:100%
 
     font-family:Segoe UI,sans-serif;
-    overflow-x: hidden;
-    background-attachment: fixed;
- 
-}
-    
+    overflow:hidden;
+   
   }
 
   /* Heart style */
