--- a/birthday.html
+++ b/birthday.html
@@ -12,15 +12,15 @@
     align-items:center;
     background:
     linear-gradient(
-      rgba(0,0,0,0.45),
-      rgba(0,0,0,0.45)
+      rgba(0,0,0,0.35),
+      rgba(0,0,0,0.35)
     ),
    url("image4.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    width:100%;
-   height:100%
+   height:100%;
 
     font-family:Segoe UI,sans-serif;
     overflow:hidden;
