--- a/birthday.html
+++ b/birthday.html
@@ -69,7 +69,7 @@
   }
 }
   .card{
-    background: rgba(176, 48, 96, 0.92);
+    background: rgba(0,0,0,0.7);
     padding:40px;
     border-radius:20px;
     text-align:center;
